--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -11,7 +11,6 @@
 
 .reportFieldset {
   margin-top: 1em;
-  border: 1px dashed #117743;
   padding: 0.5em;
   margin-bottom: 1em;
 }
@@ -219,6 +218,7 @@
 
 .boardHeader p#labelDescription {
   font-size: 100%;
+  padding-bottom: 20px;
 }
 
 .boardHeader a {
