--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -77,6 +77,10 @@
     <p id="labelDescription"></p>
   </header>
 
+ <center>
+  <a href="#" onclick="displayFunction()">[Start a New Thread]</a>
+ </center>
+
   <div class="postingFormWrapper">
 
     <form
@@ -275,6 +279,17 @@
     </form>
 
   </div>
+ <script>
+function displayFunction() {
+    var x = document.getElementById("postingFormWrapper");
+    if (x.style.display === "none") {
+        x.style.display = "block";
+    } else {
+        x.style.display = "none";
+    }
+}
+</script>
+
 
   <div id="panelMessage">
     <hr>
