--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -289,12 +289,17 @@ function displayFunction() {
 }
 </script> 
 
+<hr class ="topLinkHr">
+<div class = "topLinks">
+[<a href="">Home</a>] [<a href="catalog.html">Catalog</a>] 
+</div>
+
   <div id="panelMessage">
     <hr>
     <div id="divMessage"></div>
     <hr>
-  </div>
 
+  </div>
   <div id="threadList">
 
       <div id="divThreads"></div>
@@ -431,7 +436,7 @@ function toggleBoxes() {
     }
 }
 </script> 
-  <footer id="footer"></footer>
+  <footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.</footer>
 
 </body>
 
