--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -655,7 +655,7 @@ function toggleBoxes() {
     }
 }
 </script> 
-  <footer id="footer"></footer>
+  <footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.</footer>
 
 </body>
 
