--- a/templates/cells/uploadCell.html
+++ b/templates/cells/uploadCell.html
@@ -1,7 +1,7 @@
 <div class="uploadDetails">
   <a
     class="nameLink"
-    target="blank">Open file</a>
+    target="blank"> </a>
   (<span class="sizeLabel"></span> <span class="dimensionLabel"></span>
   <a class="originalNameLink"></a>
   )
