--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -174,6 +174,8 @@
               </div>
             </td>
           </tr>
+
+
           <tr
             id="alwaysUseBypassDiv"
             class="hidden">
@@ -183,6 +185,8 @@
                 type="checkbox"
                 id="fieldPostingPassword"></td>
           </tr>
+
+
           <tr id="flagsDiv">
             <th>Flag</th>
             <td>
@@ -288,17 +292,13 @@ function displayFunction() {
     y.style.display = "none";
 }
 </script> 
-
-<hr class ="topLinkHr">
-<div class = "topLinks">
-[<a href="">Home</a>] [<a href="catalog.html">Catalog</a>] 
-</div>
-
   <div id="panelMessage">
     <hr>
     <div id="divMessage"></div>
     <hr>
-
+</div>
+<div class = "topLinks">
+[<a href="/">Home</a>] [<a href="catalog.html">Catalog</a>]
   </div>
   <div id="threadList">
 
@@ -312,7 +312,7 @@ function displayFunction() {
           id="divPages"></span> <a id="linkNext"></a> ]
         </span>
 
-        <div id="boardContentLinks">
+        <div id="boardContentLinks" alight="right">
           <span>[</span>
           <a id="linkManagement">Manage Board</a>
           <span>/</span>
