--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -36,22 +36,16 @@
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         class="coloredIcon"
-        id="navLinkHome">home</a> <span>/</span> <a
+        id="navLinkHome">Home</a> <span>/</span> <a
         href="/boards.js"
         class="coloredIcon"
-        id="navBoardList">boards</a> <span>/</span> <a
+        id="navBoardList">Boards</a> <span>/</span> <a
         href="/overboard"
         class="coloredIcon"
-        id="navOverboard">overboard</a> <span>/</span> <a
-        href="/.static/donate.html"
-        class="coloredIcon"
-        id="navDonate">donate</a> <span>/</span> <a
-        href="http://radio.mewch.net"
-        class="coloredIcon"
-        id="navRadio">radio</a> <span>/</span> <a
+        id="navOverboard">Overboard</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
-        id="navPosting">help</a> <span>]</span>
+        id="navPosting">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span>[</span>
       <a
         href="#"
@@ -62,10 +56,10 @@
         id="linkBottom"></a> <span>/</span> <a
         href="catalog.html"
         class="coloredIcon"
-        id="navCatalog">catalog</a> <span>/</span> <a
+        id="navCatalog">Catalog</a> <span>/</span> <a
         href="index.rss"
         class="coloredIcon"
-        id="linkRss">rss</a> <span>]</span>
+        id="linkRss">RSS</a> <span>]</span>
     </span>
   </nav>
 
