--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -24,7 +24,6 @@
 
 .unhideButton, .embedButton {
   cursor: pointer;
-  color: #FFB300;
   font-size: 80%;
 }
 
@@ -51,7 +50,6 @@
 }
 
 .innerPost, .markedPost {
-  background: #282A2E;
   display: inline-block;
   overflow: hidden;
   padding-right: 0.5em;
@@ -60,10 +58,9 @@
   max-width: 100%;
 }
 
-.markedPost {
-  background: rgba(59, 22, 43, 0.4);
+.innerPost {
+  background: #282A2E;
 }
-
 .linkName {
   font-weight: bold;
 }
