--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -28,13 +28,13 @@
     <span id="navLinkSpan"> <span>[</span> <a
         href="/boards.js"
         class="coloredIcon"
-        id="navBoardList">boards</a> <span>/</span> <a
+        id="navBoardList">Boards</a> <span>/</span> <a
         href="/overboard"
         class="coloredIcon"
-        id="navOverboard">overboard</a> <span>/</span> <a
+        id="navOverboard">Overboard</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
-        id="navPosting">help</a> <span>]</span>
+        id="navPosting">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
