Added [Post a Reply] button at bottom of every thread/newly generated thread. Need to fix update timer to countdown on both top and bottom.

--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -461,8 +461,7 @@ function returnToPage() {
 
 
 <div class = "bottomLinks">
-[<a href="" onclick="returnToPage()"">Return</a>] [<a href="catalog.html">Catalog</a>] [<a href="#">Top</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]
-
+[<a href="" onclick="returnToPage()"">Return</a>] [<a href="catalog.html">Catalog</a>] [<a href="#">Top</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]<div class="bottomPostReply" style="text-align: center">[<a href="#null" onclick="setQr()">Post a Reply</a>]</div>
 <hr>
       <div id=boardContentLinks align="right">
         <span>[</span>
