--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -223,7 +223,7 @@
                   name="spoiler"
                   id="checkboxSpoiler">
 
-                <label for="checkboxSpoiler">Spoiler?</label>
+                <label for="checkboxSpoiler">Spoiler</label>
               </div>
 
               <p class="small">
