--- a/templates/pages/account.html
+++ b/templates/pages/account.html
@@ -218,23 +218,23 @@
               class="captchaField"
               name="captcha"
               id="fieldCaptcha"
-              placeholder="answer">
+              placeholder="Answer">
 
             <a
               href="/noCookieCaptcha.js"
-              class="small">no cookies?</a>
+              class="small">No cookies?</a>
 
           </div>
 
           <input
             type="submit"
-            value="create board"
+            value="Create Board"
             id="newBoardFormButton">
 
           <input
             type="button"
             onClick="createBoard()"
-            value="create board"
+            value="Create Board"
             id="newBoardJsButton"
             class="hidden">
 
