--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -261,7 +261,7 @@
                   type="text"
                   class="captchaField"
                   id="fieldCaptcha"
-                  placeholder="answer">
+                  placeholder="Answer">
 
                 <a
                   href="/noCookieCaptcha.js"
@@ -400,7 +400,7 @@ function displayFunction() {
 
           <a
             href="/noCookieCaptcha.js"
-            class="small">no cookies?</a>
+            class="small">No cookies?</a>
           <br>
 
           <input
@@ -430,7 +430,10 @@ function toggleBoxes() {
     }
 }
 </script> 
-  <footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.</footer>
+<footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
+<br />
+<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+</footer>
 
 </body>
 
