--- a/templates/pages/catalog.html
+++ b/templates/pages/catalog.html
@@ -60,7 +60,7 @@
       id="labelBoard"></a>
   </p>
 
-
+<div id="wholePostingForm">
   <div id="postingForm">
     <button
       id="togglePosting"
@@ -253,6 +253,7 @@
     </fieldset>
 
   </div>
+</div>
 
   <div
     id="divTools"
@@ -283,6 +284,11 @@
     id="divThreads"
     class="catalogDiv"></div>
 
+<footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
+<br />
+<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+</footer>
+
 </body>
 
 <script src="/.static/js/settings.js"></script>
@@ -291,7 +297,8 @@
 <script src="/.static/js/board.js"></script>
 <script src="/.static/js/postCommon.js"></script>
 <script src="/.static/js/captchaModal.js"></script>
-<script src="/.static/js/captcha.js"></script>
+<script src="/.st<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+</footer>atic/js/captcha.js"></script>
 <script src="/.static/js/catalog.js"></script>
 <script src="/.static/js/themes.js"></script>
 <script src="/.static/js/draggable.js"></script>
