--- a/templates/pages/boards.html
+++ b/templates/pages/boards.html
@@ -20,16 +20,16 @@
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         class="coloredIcon"
-        id="navLinkHome">home</a> <span>/</span> <a
+        id="navLinkHome">Home</a> <span>/</span> <a
         href="/boards.js"
         class="coloredIcon"
-        id="navBoardList">boards</a> <span>/</span> <a
+        id="navBoardList">Boards</a> <span>/</span> <a
         class="coloredIcon"
-        id="linkOverboard">overboard</a> <span>/</span> <a id="linkSfwOver">overboard
-        sfw</a> <span>/</span> <a
+        id="linkOverboard">Overboard</a> <span>/</span> <a id="linkSfwOver">Overboard
+        SFW</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
-        id="navPosting">help</a> <span>]</span>
+        id="navPosting">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
   </nav>
 
@@ -60,12 +60,12 @@
         <input
           type="text"
           name="boardUri"
-          placeholder="board">
+          placeholder="Board">
 
         <input
           type="text"
           name="tags"
-          placeholder="tags">
+          placeholder="Tags">
 
         <div id="boardsSort">
           <select name="sorting">
@@ -93,7 +93,7 @@
 
         <input
           type="submit"
-          value="search"
+          value="Search"
           id="searchButton">
 
       </form>
