--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -36,22 +36,16 @@
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
         class="coloredIcon"
-        id="navLinkHome">home</a> <span>/</span> <a
+        id="navLinkHome">Home</a> <span>/</span> <a
         href="/boards.js"
         class="coloredIcon"
-        id="navBoardList">boards</a> <span>/</span> <a
+        id="navBoardList">Boards</a> <span>/</span> <a
         href="/overboard"
         class="coloredIcon"
-        id="navOverboard">overboard</a> <span>/</span> <a
-        href="/.static/donate.html"
-        class="coloredIcon"
-        id="navDonate">donate</a> <span>/</span> <a
-        href="http://radio.mewch.net"
-        class="coloredIcon"
-        id="navRadio">radio</a> <span>/</span> <a
+        id="navOverboard">Overboard</a> <span>/</span> <a
         href="/.static/posting.html"
         class="coloredIcon"
-        id="navPosting">help</a> <span>]</span>
+        id="navPosting">Help</a> <span>]</span>
     </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span>[</span>
       <a
         href=".."
@@ -65,7 +59,7 @@
         class="coloredIcon"></a> <span>/</span> <a
         href="../catalog.html"
         id="navCatalog"
-        class="coloredIcon">catalog</a> <span>]</span>
+        class="coloredIcon">Catalog</a> <span>]</span>
     </span>
   </nav>
 
@@ -263,11 +257,11 @@
                   type="text"
                   class="captchaField"
                   id="fieldCaptcha"
-                  placeholder="answer">
+                  placeholder="Answer">
 
                 <a
                   href="/noCookieCaptcha.js"
-                  class="small">no cookies?</a>
+                  class="small">No cookies?</a>
 
               </div>
             </td>
@@ -430,7 +424,7 @@
   </div>
 
 <div class = "topLinks">
-[<a href="" onclick="returnToPage()"">Return</a>] [<a href="../catalog.html">Catalog</a>] [<a href="#footer">Bottom</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]
+[<a href="..">Return</a>] [<a href="../catalog.html">Catalog</a>] [<a href="#footer">Bottom</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]
         [<label>
           <input
             id="checkboxChangeRefresh"
@@ -461,7 +455,7 @@ function returnToPage() {
 
 
 <div class = "bottomLinks">
-[<a href="" onclick="returnToPage()"">Return</a>] [<a href="catalog.html">Catalog</a>] [<a href="#">Top</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]<div class="bottomPostReply" style="text-align: center">[<a href="#null" onclick="setQr()">Post a Reply</a>]</div>
+[<a href="..">Return</a>] [<a href="../catalog.html">Catalog</a>] [<a href="#">Top</a>] [<a href="#null" id="refreshButton" onclick="refreshPosts(true)" value="Refresh">Update</a>]<div class="bottomPostReply" style="text-align: center">[<a href="#null" onclick="setQr()">Post a Reply</a>]</div>
 <hr>
       <div id=boardContentLinks align="right">
         <span>[</span>
@@ -556,7 +550,7 @@ function returnToPage() {
 
           <a
             class="small"
-            href="/noCookieCaptcha.js">no cookies?</a>
+            href="/noCookieCaptcha.js">No cookies?</a>
 
           <br>
 
@@ -664,8 +658,10 @@ function toggleBoxes() {
     }
 }
 </script> 
-  <footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.</footer>
-
+<footer id="footer">All trademarks and copyrights on this page are owned by their respective parties. Images uploaded are the responsibility of the Poster. Comments are owned by the Poster.
+<br />
+<div class = "footerBar"><a href="/.static/about.html">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/legal.html">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
+</footer>
 </body>
 
 <script src="/.static/js/settings.js"></script>
