Added a FAQ page, and added new features, fixed some bugs.

--- a/templates/pages/account.html
+++ b/templates/pages/account.html
@@ -48,12 +48,12 @@
         <input
           id="logoutFormButton"
           type="submit"
-          value="logout">
+          value="Logout">
         <input
           type="button"
           id="logoutJsButton"
           onClick="logout()"
-          value="logout"
+          value="Logout"
           class="hidden">
       </form>
 
