--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -51,13 +51,13 @@
           type="text"
           name="login"
           id="loginFieldLogin"
-          placeholder="login">
+          placeholder="Username">
 
         <input
           type="password"
           id="loginFieldPassword"
           name="password"
-          placeholder="password">
+          placeholder="Password">
 
         <div id="divRemember">
           <input
@@ -70,13 +70,13 @@
         <input
           type="submit"
           id="loginFormButton"
-          value="login">
+          value="Login">
 
         <input
           type="button"
           id="loginJsButton"
           onclick="loginUser()"
-          value="login"
+          value="Login"
           class="hidden">
 
       </form>
@@ -120,7 +120,7 @@
               type="button"
               id="reloadCaptchaButton"
               onclick="reloadCaptcha()"
-              value="reload">
+              value="Reload">
             <span class="captchaTimer"></span>
 
             <br>
@@ -130,23 +130,23 @@
               type="text"
               class="captchaField"
               id="fieldCaptcha"
-              placeholder="answer">
+              placeholder="Answer">
 
             <a
               class="small"
-              href="/noCookieCaptcha.js">no cookies?</a>
+              href="/noCookieCaptcha.js">No cookies?</a>
           </div>
 
           <input
             type="submit"
             id="registerFormButton"
-            value="register">
+            value="Register">
 
           <input
             type="button"
             id="registerJsButton"
             onclick="registerAccount()"
-            value="register"
+            value="Register"
             class="hidden">
 
         </form>
@@ -165,7 +165,7 @@
             type="text"
             name="login"
             id="recoverFieldLogin"
-            placeholder="login">
+            placeholder="Username">
 
           <div class="captchaDiv">
 
@@ -179,7 +179,7 @@
               type="button"
               id="reloadCaptchaButtonRecover"
               onclick="reloadCaptcha()"
-              value="reload">
+              value="Reload">
             <span class="captchaTimer"></span>
 
             <br>
@@ -189,23 +189,23 @@
               type="text"
               class="captchaField"
               id="fieldCaptchaRecover"
-              placeholder="answer">
+              placeholder="Answer">
 
             <a
               class="small"
-              href="/noCookieCaptcha.js">no cookies?</a>
+              href="/noCookieCaptcha.js">No cookies?</a>
           </div>
 
           <input
             type="submit"
             id="recoverFormButton"
-            value="request recovery">
+            value="Request Recovery">
 
           <input
             type="button"
             id="recoverJsButton"
             onclick="recoverAccount()"
-            value="request recovery"
+            value="Request Recovery"
             class="hidden">
         </form>
 
