Fix thumbnail scaling, turned out to be a stupid CSS tag I didn't see.

--- a/templates/pages/board.html
+++ b/templates/pages/board.html
@@ -312,7 +312,7 @@ function displayFunction() {
           <span>/</span>
           <a id="linkModeration">Moderate Board</a>
 	  <span>/</span>
-	  <a id="capbutton" href="#footer" onclick="toggleBoxes()">Report Boxes</a>
+	  <a id="capbutton" href="#footer" onclick="toggleBoxes()">Report/Delete</a>
           <span>]</span>
         </div>
       </div>
