--- a/templates/pages/thread.html
+++ b/templates/pages/thread.html
@@ -463,7 +463,7 @@ function returnToPage() {
         <span>/</span>
         <a id="linkMod">Moderate Thread</a>
 	<span>/</span>
-	<a id="capbutton" href="#footer" onclick="toggleBoxes()">Report Boxes</a>
+	<a id="capbutton" href="#footer" onclick="toggleBoxes()">Report/Delete</a>
         <span>]</span>
       </div>
     <div id="hiddenboxes" style="display:none">
